migrate from jjwt to nimbus-jose-jwt for jwt token support
Signed-off-by: Henry Avetisyan <hga@yahooinc.com>